Add local development login seed